<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="355dp"
        android:layout_height="80dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:shadowDy="2"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:contentDescription="@string/ImageHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/klipartz_com" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/subTitleColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/inputTipoTenis"
        android:layout_width="357dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/alegreya_bold"
        android:hint="@string/typeOfShoes"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textColor="@color/typeOfShoes"
        android:textColorHint="@color/typeOfShoes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/inputBranch"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/alegreya_bold"
        android:hint="@string/branch"
        android:inputType="text"
        android:textColor="@color/branch"
        android:textColorHint="@color/branch"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputColor"
        android:layout_width="364dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/alegreya_bold"
        android:hint="@string/color"
        android:inputType="text"
        android:textColor="@color/color"
        android:textColorHint="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/colorButton"
        android:fontFamily="@font/alegreya_bold"
        android:isScrollContainer="true"
        android:onClick="enviarData"
        android:text="@string/tittlebutton"
        android:textColor="@color/colorTextButton"
        android:textSize="24sp"
        app:icon="@android:drawable/ic_menu_search"
        app:iconGravity="end"
        app:iconSize="24dp"
        app:iconTint="@color/colorIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtResultadoBusqueda"
        android:layout_width="260dp"
        android:layout_height="94dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/searchResult"
        android:textAlignment="center"
        android:textColor="#616161"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>